[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "medical-imaging-toolkit"
version = "0.1.0"
description = "Reusable medical image I/O, datasets, transforms, and utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Charles" }]
keywords = ["medical-imaging", "dicom", "nifti", "pytorch"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
imaging = ["SimpleITK>=2.3", "nibabel>=5.2", "pydicom>=2.4"]
torch = ["torch>=2.1"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
all = [
  "SimpleITK>=2.3",
  "nibabel>=5.2",
  "pydicom>=2.4",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/your-username/medical-imaging-toolkit"
Issues = "https://github.com/your-username/medical-imaging-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_toolkit"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
