[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "medimageflow"
dynamic = ["version"]
description = "Reusable medical image I/O, datasets, transforms, and utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Charles Hu", email = "hujunhao.charles@gmail.com" }]
keywords = ["medical-imaging", "dicom", "nifti", "pytorch"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
imaging = [
  "MedPy>=0.5",
  "SimpleITK>=2.3",
  "nibabel>=5.2",
  "pydicom>=2.4",
  "scikit-image>=0.22",
  "scipy>=1.10",
]
torch = ["torch>=2.1"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10,<2"]
all = [
  "MedPy>=0.5",
  "SimpleITK>=2.3",
  "nibabel>=5.2",
  "pydicom>=2.4",
  "scikit-image>=0.22",
  "scipy>=1.10",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/Charles-Hu/MedImageFlow"
Repository = "https://github.com/Charles-Hu/MedImageFlow"
Issues = "https://github.com/Charles-Hu/MedImageFlow/issues"

[tool.hatch.version]
path = "src/medimageflow/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/medimageflow"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
